# merge_pdf

./: .gitignore  Justfile  README.md  mix.exs
.github/workflows/: release.yaml
lib/: merge_pdf.ex
lib/merge_pdf/: native.ex
native/mergepdf_native/: Cargo.toml  README.md
native/mergepdf_native/src/: lib.rs
scripts/: verify_published.exs
test/: merge_pdf_test.exs
