[package]
name = "mergepdf_native"
version = "0.5.2"
authors = ["Jake Prem"]
edition = "2021"

[lib]
name = "mergepdf_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.30.0", default-features = false, features = [
  "derive",
  "nif_version_2_15",
] }
# lopdf = { path = "../../lopdf" }
lopdf = "0.39.0"
